# winauth_flutter

./: .metadata  README.md  pubspec.yaml
lib/: winauth_flutter.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs
windows/: CMakeLists.txt
