[package]
name = "winauth_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
winauth = "0.0.5"
reqwest = { version = "0.12.26", default-features = false, features = ["blocking", "rustls-tls"]}
anyhow = "1.0.100"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
